# literature-cli

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  plan.md  pyproject.toml  requirements.txt
.litcli/: auth.example.json  auth.example.toml  config.example.toml
docs/: architecture.md  cli.md  skill.md
lit/: __init__.py  config.py  logger.py  main.py  output.py
lit/commands/: __init__.py  add.py  affiliation.py  author.py  collect.py  config.py  db.py  delete.py  edit.py  export.py  list.py  pdf.py  references.py  search.py  show.py
ng/: __init__.py  alembic.ini
ng/alembic/: env.py
ng/alembic/versions/: 03b4cd44700f_add_html_snapshot_path_to_papers_table.py  10f8534b9062_add_uuid_to_papers_table.py  2be4589a53bb_add_last_modified_to_collections.py  3e1f8a2c9b05_add_faculty_url_to_authors.py  6c2b9a7f1d10_add_affiliations_and_author_fields.py  7f6a9c21d4aa_add_platform_identifiers.py  a1b2c3d4e5f6_add_parsed_pdf_path_to_papers.py  (+1 more)
ng/db/: __init__.py  database.py  models.py
ng/services/: __init__.py  add_paper.py  affiliation.py  arxiv_utils.py  author.py  collection.py  constants.py  database.py  export.py  fetch.py  formatting.py  http_utils.py  identifier.py  llm_utils.py  logger.py  metadata.py  mineru.py  openalex.py  paper.py  pdf.py  platform_ids.py  prompts.py  references.py  search.py  semantic_scholar.py  system.py  unpaywall.py  utils.py  validation.py
skills/literature-cli/: REFERENCE.md  SKILL.md
tests/: test_cli_commands.py  test_config.py  test_output_platform_ids.py  test_plan_features.py
(+6 files in other folders)
